# lib-rust-oggvorbis-meta

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: tag_file.rs
src/: lib.rs
tests/: metadata.rs
